crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__code__fib.snap
---
source: crates/dora-compiler/src/wasm/tests/code.rs
expression: op
snapshot_kind: text
---
module {
  func.func @"fib-recursive"(%arg0: !llvm.ptr, %arg1: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %1 = llvm.load %0 : !llvm.ptr -> i32
    %c1_i32 = arith.constant 1 : i32
    %2 = "wasm.leu"(%1, %c1_i32) : (i32, i32) -> i32
    %c0_i32 = arith.constant 0 : i32
    %3 = arith.cmpi ne, %2, %c0_i32 : i32
    cf.cond_br %3, ^bb3, ^bb4
  ^bb2(%4: i32):  // 2 preds: ^bb3, ^bb5
    return %4 : i32
  ^bb3:  // pred: ^bb1
    %5 = llvm.load %0 : !llvm.ptr -> i32
    cf.br ^bb2(%5 : i32)
  ^bb4:  // pred: ^bb1
    cf.br ^bb5
  ^bb5:  // pred: ^bb4
    %6 = llvm.load %0 : !llvm.ptr -> i32
    %c1_i32_0 = arith.constant 1 : i32
    %7 = "wasm.sub"(%6, %c1_i32_0) : (i32, i32) -> i32
    %8 = call @"fib-recursive"(%arg0, %7) : (!llvm.ptr, i32) -> i32
    %9 = llvm.load %0 : !llvm.ptr -> i32
    %c2_i32 = arith.constant 2 : i32
    %10 = "wasm.sub"(%9, %c2_i32) : (i32, i32) -> i32
    %11 = call @"fib-recursive"(%arg0, %10) : (!llvm.ptr, i32) -> i32
    %12 = "wasm.add"(%8, %11) : (i32, i32) -> i32
    cf.br ^bb2(%12 : i32)
  }
  func.func @"fib-iterative"(%arg0: !llvm.ptr, %arg1: i32) -> i32 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    %c0_i32 = arith.constant 0 : i32
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %1 : i32, !llvm.ptr
    %c1_i64_1 = arith.constant 1 : i64
    %2 = llvm.alloca %c1_i64_1 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %2 : i32, !llvm.ptr
    %c1_i64_2 = arith.constant 1 : i64
    %3 = llvm.alloca %c1_i64_2 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %3 : i32, !llvm.ptr
    %c1_i64_3 = arith.constant 1 : i64
    %4 = llvm.alloca %c1_i64_3 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %4 : i32, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c0_i32_4 = arith.constant 0 : i32
    llvm.store %c0_i32_4, %1 : i32, !llvm.ptr
    %c1_i32 = arith.constant 1 : i32
    llvm.store %c1_i32, %2 : i32, !llvm.ptr
    %c0_i32_5 = arith.constant 0 : i32
    llvm.store %c0_i32_5, %3 : i32, !llvm.ptr
    %5 = llvm.load %0 : !llvm.ptr -> i32
    %c0_i32_6 = arith.constant 0 : i32
    %6 = "wasm.eq"(%5, %c0_i32_6) : (i32, i32) -> i32
    %c0_i32_7 = arith.constant 0 : i32
    %7 = arith.cmpi ne, %6, %c0_i32_7 : i32
    cf.cond_br %7, ^bb3, ^bb4
  ^bb2(%8: i32):  // 3 preds: ^bb3, ^bb6, ^bb9
    return %8 : i32
  ^bb3:  // pred: ^bb1
    %c0_i32_8 = arith.constant 0 : i32
    cf.br ^bb2(%c0_i32_8 : i32)
  ^bb4:  // pred: ^bb1
    cf.br ^bb5
  ^bb5:  // pred: ^bb4
    %9 = llvm.load %0 : !llvm.ptr -> i32
    %c1_i32_9 = arith.constant 1 : i32
    %10 = "wasm.eq"(%9, %c1_i32_9) : (i32, i32) -> i32
    %c0_i32_10 = arith.constant 0 : i32
    %11 = arith.cmpi ne, %10, %c0_i32_10 : i32
    cf.cond_br %11, ^bb6, ^bb7
  ^bb6:  // pred: ^bb5
    %c1_i32_11 = arith.constant 1 : i32
    cf.br ^bb2(%c1_i32_11 : i32)
  ^bb7:  // pred: ^bb5
    cf.br ^bb8
  ^bb8:  // pred: ^bb7
    cf.br ^bb10
  ^bb9:  // pred: ^bb11
    %12 = llvm.load %2 : !llvm.ptr -> i32
    cf.br ^bb2(%12 : i32)
  ^bb10:  // 2 preds: ^bb8, ^bb10
    %13 = llvm.load %2 : !llvm.ptr -> i32
    llvm.store %13, %4 : i32, !llvm.ptr
    %14 = llvm.load %1 : !llvm.ptr -> i32
    %15 = llvm.load %2 : !llvm.ptr -> i32
    %16 = "wasm.add"(%14, %15) : (i32, i32) -> i32
    llvm.store %16, %2 : i32, !llvm.ptr
    %17 = llvm.load %4 : !llvm.ptr -> i32
    llvm.store %17, %1 : i32, !llvm.ptr
    %18 = llvm.load %3 : !llvm.ptr -> i32
    %c1_i32_12 = arith.constant 1 : i32
    %19 = "wasm.add"(%18, %c1_i32_12) : (i32, i32) -> i32
    llvm.store %19, %3 : i32, !llvm.ptr
    %20 = llvm.load %3 : !llvm.ptr -> i32
    %21 = llvm.load %0 : !llvm.ptr -> i32
    %c1_i32_13 = arith.constant 1 : i32
    %22 = "wasm.sub"(%21, %c1_i32_13) : (i32, i32) -> i32
    %23 = "wasm.ltu"(%20, %22) : (i32, i32) -> i32
    %c0_i32_14 = arith.constant 0 : i32
    %24 = arith.cmpi ne, %23, %c0_i32_14 : i32
    cf.cond_br %24, ^bb10, ^bb11
  ^bb11:  // pred: ^bb10
    cf.br ^bb9
  }
  func.func private @dora_fn_wasm_table_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_table_fill(!llvm.ptr, i32, i32, !llvm.ptr, i32)
  func.func private @dora_fn_wasm_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_table_set(!llvm.ptr, i32, i32, !llvm.ptr)
  func.func private @dora_fn_wasm_imported_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_imported_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_imported_table_grow(!llvm.ptr, !llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_copy(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_func_ref(!llvm.ptr, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_data_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_elem_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_raise_trap(!llvm.ptr, i32)
}
